--- a/hello.html
+++ b/hello.html
@@ -3,7 +3,7 @@
 <body>
     Hello World, this is jaithra bopanna
     <h2>test!!</h2>
-    Hello World, this is jaithra bopanna ..
+    Hello World, this is jaithra bopanna .
     <h2>test</h2>
 </body>
 </html> 
